--- a/.github/workflows/artifact-image-matrix.yml
+++ b/.github/workflows/artifact-image-matrix.yml
@@ -11,7 +11,7 @@ jobs:
   
   matrix_prep:
     if: ${{ github.repository_owner == 'rpardini' }}
-    runs-on: "ubuntu-latest"
+    runs-on: "macos-latest" # is mac faster? "ubuntu-latest"
     env:
       OCI_TARGET_BASE: "ghcr.io/${{ github.repository }}/" # This is picked up by the Docker launcher automatically
       DOCKER_ARMBIAN_BASE_COORDINATE_PREFIX: "ghcr.io/${{ github.repository }}:armbian-next-" # Use Docker image in same repo
@@ -78,7 +78,7 @@ jobs:
       # Login to ghcr.io, for later uploading rootfs to ghcr.io
       - name: Docker Login to GitHub Container Registry
         uses: docker/login-action@v2
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }} # GitHub username or org
@@ -86,7 +86,7 @@ jobs:
 
       - name: Checkout build repo
         uses: actions/checkout@v3 # We don't need to clone git, really. A wget would suffice for GH-hosted runners. But using clone is better for Igor-hosted runners.
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         with:
           repository: ${{ github.repository_owner }}/armbian-build
           ref: extensions
@@ -94,7 +94,7 @@ jobs:
           clean: false # true is default. it *will* delete the hosts /dev if mounted inside.
 
       - name: Build  ${{matrix.desc}}
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         run: |
           bash ./compile.sh ${{ matrix.invocation }} SHARE_LOG=yes
 
@@ -118,7 +118,7 @@ jobs:
 
       - name: Checkout build repo
         uses: actions/checkout@v3
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         with:
           repository: ${{ github.repository_owner }}/armbian-build
           ref: extensions
@@ -126,13 +126,13 @@ jobs:
 
       - name: ${{matrix.desc}}
         id: build-one-image
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         run: |
           bash ./compile.sh ${{ matrix.invocation }} "IMAGE_VERSION=20220400-${{ github.repository_owner }}" ${{env.EXTRA}}
 
       - name: "Release: ${{matrix.desc}}"
         uses: "marvinpinto/action-automatic-releases@latest"
-        if: ${{matrix.really}}
+        if: ${{matrix.really == 'yes'}}
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest-images"
@@ -142,6 +142,6 @@ jobs:
             output/images/*.xz
 
       - name: Cleanup output images
-        if: always() && ${{matrix.really}}
+        if: always() && ${{matrix.really == 'yes' }}
         run: |
           rm -rf output/images userpatches/VERSION
