--- a/.github/workflows/artifact-image-matrix.yml
+++ b/.github/workflows/artifact-image-matrix.yml
@@ -148,28 +148,24 @@ jobs:
         run: |
           bash ./compile.sh ${{ matrix.invocation }} "IMAGE_VERSION=20220400-${{ github.repository_owner }}" ${{env.EXTRA}}
 
-      - name: Upload binaries to release
-        uses: svenstaro/upload-release-action@v2
+      - name: Release ${{ matrix.board }}
         id: release1
-        continue-on-error: true
         if: ${{matrix.really == 'yes'}}
+        continue-on-error: true
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: output/images/*.xz
-          tag: latest-images # created in prepare above
-          overwrite: true
-          file_glob: true
+          tag_name: latest-images
+          files: |
+            output/images/*.xz
 
-      - name: Upload binaries to release (retry)
-        uses: svenstaro/upload-release-action@v2
+      - name: Release ${{ matrix.board }} (retry if 1st failed)
         id: release2
         if: ${{matrix.really == 'yes' && steps.release1.outcome == 'failure'}}
+        uses: softprops/action-gh-release@de2c0eb89ae2a093876385947365aca7b0e5f844 # de2c0eb8 = v0.1.5; already with koplo199's node16 fixes
         with:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: output/images/*.xz
-          tag: latest-images # created in prepare above
-          overwrite: true
-          file_glob: true
+          tag_name: latest-images
+          files: |
+            output/images/*.xz
 
       - name: Cleanup output images
         if: always() && ${{matrix.really == 'yes' }}
