--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -47,7 +47,7 @@ jobs:
         id: prepare-matrix
         run: |
           # this sets outputs "artifact-matrix" #and "image-matrix" 
-          bash ./compile.sh json-info-boards DEBUG=yes
+          bash ./compile.sh json-info-boards rpardini-generic DEBUG=yes
 
       - name: chown cache memoize/oci back to normal user
         run: |
