--- a/.github/workflows/artifact-image-complete-matrix.yml
+++ b/.github/workflows/artifact-image-complete-matrix.yml
@@ -1,10 +1,9 @@
 name: artifact-image-complete-matrix
 
 on:
-  #schedule:
-  #  - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
+  schedule:
+    - cron: '0 1 * * *' # Scheduled runs every day at 2am UTC
   workflow_dispatch:
-  #workflow_call:
 
 
 jobs:
