--- a/.github/workflows/daily-release.yml
+++ b/.github/workflows/daily-release.yml
@@ -1,7 +1,9 @@
 name: Create a daily release
 on:
-  schedule:
-    - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
+  #schedule:
+  #  - cron: '0 2 * * *' # Scheduled runs every day at 2am UTC
+  workflow_dispatch:
+      
 jobs:
   create_release:
     runs-on: ubuntu-latest
