--- a/.github/workflows/packages-simple.yml
+++ b/.github/workflows/packages-simple.yml
@@ -1,8 +1,8 @@
 name: packages-simple
 
 on:
-  schedule:
-    - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
+  #schedule:
+  #  - cron: '0 1 * * *' # Scheduled runs every day at 1am UTC
   workflow_dispatch:
   workflow_call:
 
